[package]
name = "pencil_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
yit_id_generator = "1.0.4"
tokio = { version = "1.0", features = ["full"] }
pw_hash = "0.1.1"
